--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -58,19 +59,18 @@
 </head>
 <body>
   <div class="card">
-    <!-- 头像与基本信息 -->
     <div class="flex items-center mb-4">
       <img src="avatar_lisa.jpg" alt="头像" class="w-20 h-20 rounded-full border-4 border-indigo-200 shadow-md object-cover mr-4" />
       <div>
         <h1 class="text-xl font-bold text-gray-800">李莎 (Lisa Li)</h1>
         <p class="text-sm text-gray-600">珠海 · 高校行政/科研助理意向</p>
-        <p class="text-sm text-gray-500">📞 19820516608 · ✉️ sha.li@vip.163.com</p>
+        <p class="text-sm text-gray-500">📞 19820516608 </p>
+        <p class="text-sm text-gray-500">✉️ sha.li@vip.163.com</p>
       </div>
     </div>
 
     <div class="divider"></div>
 
-    <!-- 自我简介 -->
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-user"></i>个人简介</div>
       <p class="text-sm text-gray-700 leading-relaxed space-y-1">
@@ -80,10 +80,8 @@
         <span class="block">📚 熟悉科研项目流程、教学辅助系统</span>
         <span class="block">🌐 具备中英双语沟通与教学能力</span>
       </p>
-   </div>
+    </div>
 
-
-    <!-- 求职目标 -->
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-bullseye"></i>求职目标</div>
       <p class="text-sm text-gray-700">
@@ -91,51 +89,67 @@
       </p>
     </div>
 
-    <!-- 教育背景 -->
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-graduation-cap"></i>教育背景</div>
       <ul class="text-sm text-gray-700 space-y-1">
-        <li>🎓 中山大学 国际MBA（优秀毕业生）</li>
-        <li>🇫🇷 GEM高端品牌管理（2025）</li>
+        <li>🎓 中山大学 国际MBA（校级优秀毕业生）</li>
+        <li>🇫🇷 法国GEM高端品牌管理（2025）</li>
         <li>📘 湖南城市学院 英语专业</li>
       </ul>
     </div>
 
-    <!-- 专业认证 -->
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-certificate"></i>专业认证</div>
       <p class="text-sm text-gray-700">
-        PMP® · 人力资源管理师（二级） · 全媒体运营师 · TEM8 · AOW 潜水证 · Microsoft MOS
+        PMP® · 人力资源管理师（二级） · 全媒体运营师 · TEM8 · AOW 潜水证 · Microsoft MOS · 中国传媒大学影视制作课程结业证
       </p>
     </div>
 
-    <!-- 核心技能 -->
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-tools"></i>核心技能</div>
       <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
-        <li>行政与科研项目管理</li>
+        <li>行政与科研项目管理（联合实验室推进经验）</li>
         <li>AI工具设计与智能体开发</li>
+        <li>短视频脚本策划与剪辑（中大官媒收录）</li>
         <li>数字化培训与教学辅助</li>
         <li>大型活动与赛事管理</li>
         <li>跨文化合作与英文沟通</li>
       </ul>
     </div>
 
-    <!-- 作品展示 -->
+    <div class="mb-4">
+      <div class="section-title">
+        <i class="fas fa-project-diagram"></i>项目经验</div>
+      <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
+        <li><strong>2025 Ironman 铁人三项赛筹备支持</strong>：利用 AI 模板提升协作效率与信息管理</li>
+         <li><strong>2024 横琴国际马拉松赛事筹备</strong>：负责流程规划、志愿者管理、应急方案设计</li>
+        <li><strong>AI 智能体模板库开发</strong>：设计智能助手模板，覆盖教育、电商、社媒场景，用户量 1000+</li>
+      </ul>
+    </div>
+    
+
+    <div class="mb-4">
+      <div class="section-title"><i class="fas fa-mountain"></i>兴趣与特质</div>
+      <p class="text-sm text-gray-700">
+        极限挑战者（独自骑行川藏线、高原徒步、珠峰南/北坡、马拉松、潜水AOW），具有坚韧、抗压与团队精神。
+      </p>
+    </div>
+
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-link"></i>作品展示</div>
       <div class="text-sm text-gray-700 link-block">
         <a href="https://r0rel9lqdms.feishu.cn/docx/VSmedTYaLo6qdkxeVgVcO6R4nTg" target="_blank">🙌 RPA+AI 简单应用上手篇</a>
         <a href="https://r0rel9lqdms.feishu.cn/docx/ApaJdYIkcohPKXxgVXLchBoSnwf" target="_blank">🔥 一键批量爆款视频转AI 工作流</a>
         <a href="https://r0rel9lqdms.feishu.cn/docx/UsgPdAOcGojisRxgK6IcwbQfnEd" target="_blank">🤖 Coze 心理学智能体 - 视频小助手</a>
-	<a href="https://r0rel9lqdms.feishu.cn/docx/O33cdHmzYoadwMx3DP3cy6HRnqb">🎬 GEM Record（中山大学官媒收录）</a>
+        <a href="https://r0rel9lqdms.feishu.cn/docx/HxSXdAkvdos1MZx70aDcuWPVnof" target="_blank">🌍 Deepseek+飞书 = 小红书爆文生产机</a>
+        <a href="https://yuanqi.tencent.com/agent/LGvdw7ixFl5u?from=share" target="_blank">📘《纳瓦尔宝典》| Navel智者智能体</a>
+        <a href="https://r0rel9lqdms.feishu.cn/docx/McAbdLqXlol4R0xRQQpcvQexnUf#share-UJl5d4KMVoSDOxxkPDxc8Ox5ndd" target="_blank">🎬 法国GEM Record（中山大学官媒收录）</a>
       </div>
     </div>
 
-    <!-- 微信二维码 -->
     <div class="mb-2 text-center">
       <img src="wechat_qr_lisa.jpg" alt="微信二维码" class="mx-auto w-36 rounded-md shadow-md border border-indigo-200 mb-2">
-      <p class="text-sm text-gray-600">扫码加我微信，一起探索AI与教育的边界 🚀</p>
+      <p class="text-sm text-gray-600">请扫码加我微信，一起探索AI与教育的边界 🚀</p>
     </div>
   </div>
 </body>
