--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <li><strong>2025 Ironman 铁人三项赛筹备支持</strong>：利用 AI 模板提升协作效率与信息管理</li>
          <li><strong>2024 横琴国际马拉松赛事筹备</strong>：负责流程规划、志愿者管理、应急方案设计</li>
         <li><strong>AI 智能体模板库开发</strong>：设计智能助手模板，覆盖教育、电商、社媒场景，用户量 1000+</li>
+        <span class="block">📌    能力可迁移至高校活动、国际合作、科研项目管理</p>
       </ul>
     </div>
     
@@ -143,6 +144,8 @@
         <a href="https://r0rel9lqdms.feishu.cn/docx/UsgPdAOcGojisRxgK6IcwbQfnEd" target="_blank">🤖 Coze 心理学智能体 - 视频小助手</a>
         <a href="https://r0rel9lqdms.feishu.cn/docx/HxSXdAkvdos1MZx70aDcuWPVnof" target="_blank">🌍 Deepseek+飞书 = 小红书爆文生产机</a>
         <a href="https://yuanqi.tencent.com/agent/LGvdw7ixFl5u?from=share" target="_blank">📘《纳瓦尔宝典》| Navel智者智能体</a>
+        <a href="https://yuanqi.tencent.com/agent/m16yB0AmoaKz?from=share" target="_blank">🏅《掌控习惯》| 习惯教练智能体</a>
+        <a href="https://yuanqi.tencent.com/agent/JHzJMYgWdTBA?from=share" target="_blank">🐸《蛤蟆先生去看心理医生》| 苍鹭医生智能体</a>
         <a href="https://r0rel9lqdms.feishu.cn/docx/McAbdLqXlol4R0xRQQpcvQexnUf#share-UJl5d4KMVoSDOxxkPDxc8Ox5ndd" target="_blank">🎬 法国GEM Record（中山大学官媒收录）</a>
       </div>
     </div>
