--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-certificate"></i>专业认证</div>
       <p class="text-sm text-gray-700">
-        PMP® · 人力资源管理师（二级） · 全媒体运营师 · TEM8 · AOW 潜水证 · Microsoft MOS · 中国传媒大学影视制作课程结业证
+        PMP® · 人力资源管理师（二级） · 全媒体运营师 · TEM8 · AOW 潜水证 · Microsoft MOS · 教师资格证 · 中国传媒大学影视制作课程结业证
       </p>
     </div>
 
@@ -146,7 +146,7 @@
         <a href="https://yuanqi.tencent.com/agent/LGvdw7ixFl5u?from=share" target="_blank">📘《纳瓦尔宝典》| Navel智者智能体</a>
         <a href="https://yuanqi.tencent.com/agent/m16yB0AmoaKz?from=share" target="_blank">🏅《掌控习惯》| 习惯教练智能体</a>
         <a href="https://yuanqi.tencent.com/agent/JHzJMYgWdTBA?from=share" target="_blank">🐸《蛤蟆先生去看心理医生》| 苍鹭医生智能体</a>
-        <a href="https://r0rel9lqdms.feishu.cn/docx/McAbdLqXlol4R0xRQQpcvQexnUf#share-UJl5d4KMVoSDOxxkPDxc8Ox5ndd" target="_blank">🎬 法国GEM Record</a>
+        <a href="https://r0rel9lqdms.feishu.cn/docx/O33cdHmzYoadwMx3DP3cy6HRnqb" target="_blank">🎬 法国GEM Record</a>
         <a href="https://mp.weixin.qq.com/s/3npa7FNV5V4T91MG_3l_aA" target="_blank" class="text-blue-600 hover:underline">🚴‍♀️ 318川藏骑行记 | 图文纪实</a>
       </div>
     </div>
