--- a/index.html
+++ b/index.html
@@ -94,39 +94,69 @@
       <ul class="text-sm text-gray-700 space-y-1">
         <li>🎓 中山大学 国际MBA（校级优秀毕业生）</li>
         <li>🇫🇷 法国GEM高端品牌管理（2025）</li>
-        <li>📘 湖南城市学院 英语专业</li>
+        <li>📘 湖南城市学院 英语专业（多次奖学金）</li>
       </ul>
     </div>
 
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-certificate"></i>专业认证</div>
-      <p class="text-sm text-gray-700">
-        PMP® · 人力资源管理师（二级） · 全媒体运营师 · TEM8 · AOW 潜水证 · Microsoft MOS · 教师资格证 · 中国传媒大学影视制作课程结业证
-      </p>
+      <div class="flex flex-wrap gap-2 text-sm">
+        <span class="bg-indigo-100 text-indigo-700 px-2 py-1 rounded-full">PMP®</span>
+        <span class="bg-green-100 text-green-700 px-2 py-1 rounded-full">人力资源管理师（二级）</span>
+        <span class="bg-yellow-100 text-yellow-700 px-2 py-1 rounded-full">全媒体运营师</span>
+        <span class="bg-blue-100 text-blue-700 px-2 py-1 rounded-full">TEM8</span>
+        <span class="bg-red-100 text-red-700 px-2 py-1 rounded-full">AOW 潜水证</span>
+        <span class="bg-purple-100 text-purple-700 px-2 py-1 rounded-full">Microsoft MOS</span>
+       <span class="bg-pink-100 text-pink-700 px-2 py-1 rounded-full">教师资格证</span>
+        <span class="bg-yellow-100 text-yellow-700 px-2 py-1 rounded-full">中传影视制作课程结业证</span>
+      </div>
     </div>
+
 
     <div class="mb-4">
       <div class="section-title"><i class="fas fa-tools"></i>核心技能</div>
-      <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
-        <li>行政与科研项目管理（联合实验室推进经验）</li>
-        <li>AI工具设计与智能体开发</li>
-        <li>短视频脚本策划与剪辑（中大官媒收录）</li>
-        <li>数字化培训与教学辅助</li>
-        <li>大型活动与赛事管理</li>
-        <li>跨文化合作与英文沟通</li>
-      </ul>
+      <div class="grid grid-cols-2 gap-2 text-sm text-gray-700">
+        <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
+          📊 行政科研项目管理<br><span class="text-xs text-gray-500">联合实验室推进经验</span>
+        </div>
+        <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
+          🤖 AI工具智能体开发<br><span class="text-xs text-gray-500">擅长结构化落地</span>
+        </div>
+        <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
+          🎬 短视频脚本与剪辑<br><span class="text-xs text-gray-500">作品被官媒收录</span>
+        </div>
+        <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
+          🧑‍🏫 数字化教学辅助<br><span class="text-xs text-gray-500">课程支持经验丰富</span>
+        </div>
+        <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
+          🏟️ 超大型赛事筹备<br><span class="text-xs text-gray-500">如马拉松、铁人三项</span>
+        </div>
+        <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
+          🌐 中英文沟通协作<br><span class="text-xs text-gray-500">跨文化工作经验</span>
+        </div>
+      </div>
     </div>
 
+
     <div class="mb-4">
-      <div class="section-title">
-        <i class="fas fa-project-diagram"></i>项目经验</div>
-      <ul class="text-sm text-gray-700 list-disc list-inside space-y-1">
-        <li><strong>2025 Ironman 铁人三项赛筹备支持</strong>：利用 AI 模板提升协作效率与信息管理</li>
-         <li><strong>2024 横琴国际马拉松赛事筹备</strong>：负责流程规划、志愿者管理、应急方案设计</li>
-        <li><strong>AI 智能体模板库开发</strong>：设计智能助手模板，覆盖教育、电商、社媒场景，用户量 1000+</li>
-        <span class="block">📌    能力可迁移至高校活动、国际合作、科研项目管理</p>
-      </ul>
+      <div class="section-title"><i class="fas fa-project-diagram"></i>项目经验</div>
+      <div class="border-l-2 border-indigo-300 pl-4 space-y-3 text-sm text-gray-700">
+        <div>
+          <div class="font-bold text-indigo-700">2025 Ironman 铁人三项赛事</div>
+          <div class="text-gray-600">利用 AI 模板提升协作效率与信息管理</div>
+        </div>
+        <div>
+          <div class="font-bold text-indigo-700">2024 横琴国际马拉松</div>
+          <div class="text-gray-600">负责流程规划、志愿者管理、应急方案设计</div>
+        </div>
+        <div>
+          <div class="font-bold text-indigo-700">  AI 智能体模板库</div>
+          <div class="text-gray-600">涉及教育、电商、社媒场景，用户量1000+</div>
+        </div>
+       <div class="pt-1 text-gray-500 text-xs">📌 能力可迁移至高校活动、国际合作、科研项目管理</div>
+      </div>
     </div>
+
     
 
     <div class="mb-4">
