--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           🎬 短视频脚本与剪辑<br><span class="text-xs text-gray-500">作品被官媒收录</span>
         </div>
         <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
-          🧑‍🏫 数字化教学辅助<br><span class="text-xs text-gray-500">课程支持经验丰富</span>
+          🧑‍🏫 数字化教学辅助<br><span class="text-xs text-gray-500">3000+学员教练</span>
         </div>
         <div class="bg-white rounded-lg shadow px-3 py-2 border border-gray-100">
           🏟️ 超大型赛事筹备<br><span class="text-xs text-gray-500">如马拉松、铁人三项</span>
