--- a/index.html
+++ b/index.html
@@ -223,11 +223,10 @@ body {
       </div>
 </div>
 </div>
-</div>
-
-<footer class="text-center text-gray-400 text-xs pt-6 border-t mt-10">
-      本页面由 Lisa 设计 · 最后更新：2025年6月
-    </footer>
+<!-- 页脚 -->
+  <footer class="w-full text-center text-gray-400 text-xs pt-6 border-t mt-10">
+    本页面由 Lisa 设计 · 最后更新：2025年6月
+  </footer>
 </div>
 </body>
 </html>
